--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -31,13 +31,16 @@ jobs:
       - name: Run tests and collect coverage
         run: |
           dotnet test backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj --collect:"XPlat Code Coverage" --results-directory ./TestResults
+          # Add debug step to list contents of TestResults directory
+          echo "Listing TestResults directory contents:"
+          dir ./TestResults
 
       # Step 5: Convert coverage to Cobertura format
       - name: Convert coverage to Cobertura
         run: |
           dotnet tool install --global dotnet-reportgenerator-globaltool
           reportgenerator -reports:"./TestResults/*/coverage.cobertura.xml" -targetdir:"./CoverageResults" -reporttypes:"Cobertura"
-
+        
       # Step 6: SonarCloud Analysis
       - name: Run SonarCloud Analysis
         env:
