--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,60 +1,38 @@
-name: SonarCloud Analysis
+name: SonarCloud
 
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
+    types: [opened, synchronize, reopened]
 
 jobs:
-  sonarcloud:
-    runs-on: windows-latest
+  build:
+    name: Build and analyze
+    runs-on: ubuntu-latest
+
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      # Step 2: Set up .NET Core
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '8.0'  # Adjusted for .NET 8.0
+          dotnet-version: '8.0.x'
 
-      # Step 3: Install dependencies
       - name: Install dependencies
-        run: |
-          dotnet restore backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj  # Restore dependencies for your project
+        run: dotnet restore
 
-      # Step 4: Run tests and collect coverage
-      - name: Run tests and collect coverage
-        run: |
-          dotnet test backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj --collect:"XPlat Code Coverage" --results-directory ./TestResults
-          # Add debug step to list contents of TestResults directory
-          echo "Listing TestResults directory contents:"
-          dir ./TestResults
+      - name: Build the project
+        run: dotnet build --no-restore
 
-      # Step 5: Convert coverage to Cobertura format
-      - name: Convert coverage to Cobertura
-        run: |
-          dotnet tool install --global dotnet-reportgenerator-globaltool
-          reportgenerator -reports:"./TestResults/*/coverage.cobertura.xml" -targetdir:"./CoverageResults" -reporttypes:"Cobertura"
-        
-      # Step 6: SonarCloud Analysis
-      - name: Run SonarCloud Analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
-        run: |
-          dotnet tool install --global dotnet-sonarscanner
-          dotnet-sonarscanner begin \
-            /k:"codestormers_CosmoVerse" \
-            /o:"<your-organization-name>" \
-            /d:sonar.host.url="https://sonarcloud.io" \
-            /d:sonar.login="${{ secrets.SONARCLOUD_TOKEN }}" \
-            /d:sonar.cs.opencover.reportsPaths="./CoverageResults/coverage.cobertura.xml"
+      - name: Run tests
+        run: dotnet test --no-build --verbosity normal
 
-          dotnet build backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj  # Build the project
-
-          dotnet-sonarscanner end \
-            /d:sonar.login="${{ secrets.SONARCLOUD_TOKEN }}"
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v1
+        with:
+          projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
+          organization: ${{ secrets.SONAR_ORGANIZATION }}
+          token: ${{ secrets.SONAR_TOKEN }}
