--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -30,6 +30,8 @@ jobs:
       # Step 4: Run tests and collect coverage
       - name: Run tests and collect coverage
         run: |
+          mkdir -p ./TestResults  # Create TestResults directory if it doesn't exist
+          dotnet add backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj package coverlet.collector
           dotnet test backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj --collect:"XPlat Code Coverage" --results-directory ./TestResults
           echo "Listing TestResults directory contents:"
           dir ./TestResults /s
