--- a/backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj
+++ b/backend/CosmoVerse/CosmoVerse/CosmoVerse.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\**" />
+    <Content Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MailKit" Version="4.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
@@ -27,10 +34,6 @@
   <ItemGroup>
     <ProjectReference Include="..\CosmoVerse.Application\CosmoVerse.Application.csproj" />
     <ProjectReference Include="..\CosmoVerse.Infrastructure\CosmoVerse.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
