--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ SENDER_PASSWORD=your_email_password
 
 # Database Connection Configuration
 DATABASECONNECTIONSTRING=DatabaseConnectionString
+
+# Allowed origins for CORS
+ALLOWED_ORIGINS=YOUR_ALLOWED_ORIGINS
